// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ChangePassword /> should render 1`] = `
<Box__BoxGroup>
  <Box__BoxGroupHeader>
    <h2>
      Password
    </h2>
  </Box__BoxGroupHeader>
  <Box__BoxGroupSection>
    <form
      onSubmit={[Function]}
    >
      <InputError
        error=""
        label="Old Password"
        name="oldPassword"
        onChange={[Function]}
        type="password"
        value=""
      />
      <InputError
        error=""
        label="New password"
        name="newPassword"
        onChange={[Function]}
        type="password"
        value=""
      />
      <InputError
        error=""
        label="Confirm New Password"
        name="confirmPassword"
        onChange={[Function]}
        type="password"
        value=""
      />
      <div
        style={
          Object {
            "marginTop": "20px",
          }
        }
      >
        <Row
          bsClass="row"
          componentClass="div"
        >
          <Col
            bsClass="col"
            className="text-muted"
            componentClass="div"
            md={6}
            xs={12}
          >
            Last changed 
            <RelativeTime
              time="2018-02-14T12:00:00.000000Z"
            />
          </Col>
          <Col
            bsClass="col"
            componentClass="div"
            md={6}
            xs={12}
          >
            <SaveButton
              altText="Change"
              pullRight={true}
            />
          </Col>
        </Row>
      </div>
    </form>
  </Box__BoxGroupSection>
</Box__BoxGroup>
`;

exports[`<ChangePassword /> should render placeholder when [props.ready=false] 1`] = `<LoadingPlaceholder />`;

exports[`<ChangePassword /> should render with error 1`] = `
<Box__BoxGroup>
  <Box__BoxGroupHeader>
    <h2>
      Password
    </h2>
  </Box__BoxGroupHeader>
  <Box__BoxGroupSection>
    <form
      onSubmit={[Function]}
    >
      <InputError
        error="existing error"
        label="Old Password"
        name="oldPassword"
        onChange={[Function]}
        type="password"
        value=""
      />
      <InputError
        error=""
        label="New password"
        name="newPassword"
        onChange={[Function]}
        type="password"
        value=""
      />
      <InputError
        error=""
        label="Confirm New Password"
        name="confirmPassword"
        onChange={[Function]}
        type="password"
        value=""
      />
      <div
        style={
          Object {
            "marginTop": "20px",
          }
        }
      >
        <Row
          bsClass="row"
          componentClass="div"
        >
          <Col
            bsClass="col"
            className="text-muted"
            componentClass="div"
            md={6}
            xs={12}
          >
            Last changed 
            <RelativeTime
              time="2018-02-14T12:00:00.000000Z"
            />
          </Col>
          <Col
            bsClass="col"
            componentClass="div"
            md={6}
            xs={12}
          >
            <SaveButton
              altText="Change"
              pullRight={true}
            />
          </Col>
        </Row>
      </div>
    </form>
  </Box__BoxGroupSection>
</Box__BoxGroup>
`;
